@@ -46,5 +46,3 @@ ResultWithMessage WindowEditorObjectSelectionSelectObject(
  * @return The number of removed objects.
  */
 int32_t EditorRemoveUnusedObjects();
-
-bool CheckObjectSelection();
